# YuyuFrame-2

./: .gitignore  FREEMIUM_ROADMAP.md  MINECRAFT-AGENT.md  PLAN.md  Question.md  Quests.json  README.md  SERVER-P2P.md  p2p_build.bat  run-dev.bat  settings.gradle  settings.properties  user_accounts.json
LauncherAPI/: .env.example  Cargo.toml  PAYMENT.md
LauncherAPI/src/: db.rs  jwt.rs  main.rs  state.rs
LauncherAPI/src/routes/: admin.rs  auth.rs  checkout.rs  dev.rs  health.rs  lemon.rs  mod.rs  stripe.rs  sync.rs
Old_YuyuFrame/: build.gradle
Old_YuyuFrame/src/main/java/Gastly/fr/mclauncher/: ImageLocations.java  (+3 more)
P2P-Server/docs/: AOT Precompilation.md  Border Sync.md  Connectivité P2P.md  Ownership Engine.md  Simulation et Delta.md
P2P-Server/p2p-agent/: build.bat
P2P-Server/p2p-agent/src/main/resources/: mixins.p2p.json
P2P-Server/remapper/src/: MojangRemapper.java
P2P-Server/rust-core/src/: lib.rs
P2P-Test/: NextStep.md  Strategie.md  run-test.bat
P2P-Test/java-test/src/main/java/test/: AgentBridge.java  AgentTest.java  FakeChunk.java
P2P-Test/p2p-agent/: build.bat
P2P-Test/remapper/src/: MojangRemapper.java
P2P-Test/rust-core/: Cargo.toml
P2P-Test/rust-core/src/: main.rs
P2P-Test/signaling/: package-lock.json  package.json  server.js
backend/: Cargo.toml  yuyu.db-shm  yuyu.db-wal
backend/capabilities/: default.json
backend/src/: db.rs  lib.rs  main.rs  state.rs
backend/src/commands/: instances.rs  launch.rs  mod.rs  mods.rs  p2p_cmd.rs  sync.rs  yuyu.rs
backend/src/minecraft/: auth.rs  fabric.rs  launcher.rs  mod.rs  p2p.rs  p2p_libp2p.rs  versions.rs
backend/src/routes/: auth.rs  launch.rs  mc.rs  mod.rs  mods.rs  versions.rs  yuyu.rs
frontend/: electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.tsbuildinfo
frontend/electron/main/: index.ts
frontend/electron/preload/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Background.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/pages/: Console.tsx  Home.tsx  Instances.tsx  Login.tsx  Mods.tsx  Plans.tsx  Server.tsx  Settings.tsx  Sync.tsx  YuyuLogin.tsx
frontend/src/stores/: useStore.ts
frontend/src/types/: electron.d.ts  index.ts
gradle/wrapper/: gradle-wrapper.properties
src/main/java/Gastly/fr/mclauncher/: LauncherCore.java  Locations.java  NoOpDownload.java
src/main/resources/assets/video/: video.avi
(+132 files in other folders)
