[package]
name = "launcher-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
argon2 = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
jsonwebtoken = "9"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
