[package]
name = "yuyuframe-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yuyuframe-backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
rand = "0.8"
zip = { version = "2", features = ["deflate"] }
