[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

# Binaire de test standalone (cargo run -- Alice)
[[bin]]
name = "peer"
path = "src/main.rs"

# Lib chargeable par Java via JNI
[lib]
name = "rust_core"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
jni = "0.21"
